--- a/mall-web/src/main/resources/mall-web-test.properties
+++ b/mall-web/src/main/resources/mall-web-test.properties
@@ -1,8 +1,8 @@
 # datasource start
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mall_test?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://47.98.233.235:3306/mall_test?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=aswra!@#*%$qQ1
 mybatis-plus.mapper-locations=classpath*:com/yayiya/**/mapper/*.xml
 # end datasource
